src.new/python/pysuv/srcn/src/uv.pxd


    cdef enum :
      UV_PIPE_NO_TRUNCATE = 1u << 0    
    """
    /*
    * uv_pipe_t is a subclass of uv_stream_t.
    *
    * Representing a pipe stream or pipe server. On Windows this is a Named
    * Pipe. On Unix this is a Unix domain socket.
    */
    struct uv_pipe_s {
      UV_HANDLE_FIELDS
      UV_STREAM_FIELDS
      int ipc;     /* non-zero if this pipe is used for passing handles */
      UV_PIPE_PRIVATE_FIELDS
    };    
    """
    cdef int uv_pipe_init(uv_loop_t*, uv_pipe_t* handle, int ipc)    
    cdef int uv_pipe_open(uv_pipe_t*, uv_file file)    
    cdef int uv_pipe_bind(uv_pipe_t* handle, const char* name)    
    cdef int uv_pipe_bind2(uv_pipe_t* handle,
                                const char* name,
                                size_t namelen,
                                unsigned int flags)    
    cdef void uv_pipe_connect(uv_connect_t* req,
                                  uv_pipe_t* handle,
                                  const char* name,
                                  uv_connect_cb cb)    
    cdef int uv_pipe_connect2(uv_connect_t* req,
                                  uv_pipe_t* handle,
                                  const char* name,
                                  size_t namelen,
                                  unsigned int flags,
                                  uv_connect_cb cb)    
    cdef int uv_pipe_getsockname(const uv_pipe_t* handle,
                                      char* buffer,
                                      size_t* size)    
    cdef int uv_pipe_getpeername(const uv_pipe_t* handle,
                                      char* buffer,
                                      size_t* size)    
    cdef void uv_pipe_pending_instances(uv_pipe_t* handle, int count)    
    cdef int uv_pipe_pending_count(uv_pipe_t* handle)    
    cdef uv_handle_type uv_pipe_pending_type(uv_pipe_t* handle)    
    cdef int uv_pipe_chmod(uv_pipe_t* handle, int flags)    

    """"
    struct uv_poll_s {
      UV_HANDLE_FIELDS
      uv_poll_cb poll_cb;    
      UV_POLL_PRIVATE_FIELDS
    }    
    """
    cdef enum uv_poll_event:
      UV_READABLE = 1,
      UV_WRITABLE = 2,
      UV_DISCONNECT = 4,
      UV_PRIORITIZED = 8

    cdef int uv_poll_init(uv_loop_t* loop, uv_poll_t* handle, int fd)       
    cdef int uv_poll_init_socket(uv_loop_t* loop,
                                      uv_poll_t* handle,
                                      uv_os_sock_t socket)    
    cdef int uv_poll_start(uv_poll_t* handle, int events, uv_poll_cb cb)    
    cdef int uv_poll_stop(uv_poll_t* handle)    

    """
    struct uv_prepare_s {
      UV_HANDLE_FIELDS
      UV_PREPARE_PRIVATE_FIELDS
    }    
    """
    cdef int uv_prepare_init(uv_loop_t*, uv_prepare_t* prepare)    
    cdef int uv_prepare_start(uv_prepare_t* prepare, uv_prepare_cb cb)    
    cdef int uv_prepare_stop(uv_prepare_t* prepare)    

    """
    struct uv_check_s {
      UV_HANDLE_FIELDS
      UV_CHECK_PRIVATE_FIELDS
    }    
    """
    cdef int uv_check_init(uv_loop_t* _, uv_check_t* check)    
    cdef int uv_check_start(uv_check_t* check, uv_check_cb cb)    
    cdef int uv_check_stop(uv_check_t* check)    


    """
    struct uv_idle_s {
      UV_HANDLE_FIELDS
      UV_IDLE_PRIVATE_FIELDS
    }    """

    cdef int uv_idle_init(uv_loop_t* _, uv_idle_t* idle)    
    cdef int uv_idle_start(uv_idle_t* idle, uv_idle_cb cb)    
    cdef int uv_idle_stop(uv_idle_t* idle)    

    """
    struct uv_async_s {
      UV_HANDLE_FIELDS
      UV_ASYNC_PRIVATE_FIELDS
    }    
    """
    cdef int uv_async_init(uv_loop_t*,
                                uv_async_t* async,
                                uv_async_cb async_cb)    
    cdef int uv_async_send(uv_async_t* async)    

    """
    /*
    * uv_timer_t is a subclass of uv_handle_t.
    *
    * Used to get woken up at a specified time in the future.
    */
    struct uv_timer_s {
      UV_HANDLE_FIELDS
      UV_TIMER_PRIVATE_FIELDS
    }    
    """
    cdef int uv_timer_init(uv_loop_t*, uv_timer_t* handle)    
    cdef int uv_timer_start(uv_timer_t* handle,
                                uv_timer_cb cb,
                                uint64_t timeout,
                                uint64_t repeat)    
    cdef int uv_timer_stop(uv_timer_t* handle)    
    cdef int uv_timer_again(uv_timer_t* handle)    
    cdef void uv_timer_set_repeat(uv_timer_t* handle, uint64_t repeat)    
    cdef uint64_t uv_timer_get_repeat(const uv_timer_t* handle)    
    cdef uint64_t uv_timer_get_due_in(const uv_timer_t* handle)    

    """
    /*
    * uv_getaddrinfo_t is a subclass of uv_req_t.
    *
    * Request object for uv_getaddrinfo.
    */
    struct uv_getaddrinfo_s {
      UV_REQ_FIELDS
      /* read-only */
      uv_loop_t* loop;    
      /* struct addrinfo* addrinfo is marked as private, but it really isn't. */
      UV_GETADDRINFO_PRIVATE_FIELDS
    }    
    """"

    cdef int uv_getaddrinfo(uv_loop_t* loop,
                                uv_getaddrinfo_t* req,
                                uv_getaddrinfo_cb getaddrinfo_cb,
                                const char* node,
                                const char* service,
                                const struct addrinfo* hints)    
    cdef void uv_freeaddrinfo(struct addrinfo* ai)    

    """
    /*
    * uv_getnameinfo_t is a subclass of uv_req_t.
    *
    * Request object for uv_getnameinfo.
    */
    struct uv_getnameinfo_s {
      UV_REQ_FIELDS
      /* read-only */
      uv_loop_t* loop;    
      /* host and service are marked as private, but they really aren't. */
      UV_GETNAMEINFO_PRIVATE_FIELDS
    }    
    """
    cdef int uv_getnameinfo(uv_loop_t* loop,
                                uv_getnameinfo_t* req,
                                uv_getnameinfo_cb getnameinfo_cb,
                                const struct sockaddr* addr,
                                int flags)    


    """/* uv_spawn() options. */"""
    ctypedef enum uv_stdio_flags:
      UV_IGNORE         = 0x00,
      UV_CREATE_PIPE    = 0x01,
      UV_INHERIT_FD     = 0x02,
      UV_INHERIT_STREAM = 0x04,
      """
      /*
      * When UV_CREATE_PIPE is specified, UV_READABLE_PIPE and UV_WRITABLE_PIPE
      * determine the direction of flow, from the child process' perspective. Both
      * flags may be specified to create a duplex data stream.
      */"""
      UV_READABLE_PIPE  = 0x10,
      UV_WRITABLE_PIPE  = 0x20,
      """
      /*
      * When UV_CREATE_PIPE is specified, specifying UV_NONBLOCK_PIPE opens the
      * handle in non-blocking mode in the child. This may cause loss of data,
      * if the child is not designed to handle to encounter this mode,
      * but can also be significantly more efficient.
      */"""
      UV_NONBLOCK_PIPE  = 0x40,
      UV_OVERLAPPED_PIPE = 0x40 """/* old name, for compatibility */"""

    ctypedef struct uv_stdio_container_s :
      cdef uv_stdio_flags flags    

      cdef union data:
          uv_stream_t* stream    
          int fd           
    ctypedef uv_stdio_container_s uv_stdio_container_t

    ctypedef struct uv_process_options_s:
      cdef uv_exit_cb exit_cb     """/* Called after the process exits. */"""
      cdef const char* file       """/* Path to program to execute. */"""
      """/*
      * Command line arguments. args[0] should be the path to the program. On
      * Windows this uses CreateProcess which concatenates the arguments into a
      * string this can cause some strange errors. See the note at
      * windows_verbatim_arguments.
      */"""
      cdef char** args    
      """/*
      * This will be set as the environ variable in the subprocess. If this is
      * NULL then the parents environ will be used.
      */"""
      cdef char** env    
      """/*
      * If non-null this represents a directory the subprocess should execute
      * in. Stands for current working directory.
      */"""
      cdef const char* cwd    
      """/*
      * Various flags that control how uv_spawn() behaves. See the definition of
      * `enum uv_process_flags` below.
      */"""
      cdef unsigned int flags    
      """/*
      * The `stdio` field points to an array of uv_stdio_container_t structs that
      * describe the file descriptors that will be made available to the child
      * process. The convention is that stdio[0] points to stdin, fd 1 is used for
      * stdout, and fd 2 is stderr.
      *
      * Note that on windows file descriptors greater than 2 are available to the
      * child process only if the child processes uses the MSVCRT runtime.
      */"""
      cdef int stdio_count    
      cdef uv_stdio_container_t* stdio    
      """/*
      * Libuv can change the child process' user/group id. This happens only when
      * the appropriate bits are set in the flags fields. This is not supported on
      * windows     uv_spawn() will fail and set the error to UV_ENOTSUP.
      */"""
      cdef uv_uid_t uid    
      cdef uv_gid_t gid    
    ctypedef uv_process_options_s uv_process_options_t    

    """/*
    * These are the flags that can be used for the uv_process_options.flags field.
    */"""
    cdef enum uv_process_flags:
      """/*
      * Set the child process' user id. The user id is supplied in the `uid` field
      * of the options struct. This does not work on windows     setting this flag
      * will cause uv_spawn() to fail.
      */"""
      UV_PROCESS_SETUID = (1 << 0),
      """/*
      * Set the child process' group id. The user id is supplied in the `gid`
      * field of the options struct. This does not work on windows     setting this
      * flag will cause uv_spawn() to fail.
      */"""
      UV_PROCESS_SETGID = (1 << 1),
      """/*
      * Do not wrap any arguments in quotes, or perform any other escaping, when
      * converting the argument list into a command line string. This option is
      * only meaningful on Windows systems. On Unix it is silently ignored.
      */"""
      UV_PROCESS_WINDOWS_VERBATIM_ARGUMENTS = (1 << 2),
      """/*
      * Spawn the child process in a detached state - this will make it a process
      * group leader, and will effectively enable the child to keep running after
      * the parent exits.  Note that the child process will still keep the
      * parent's event loop alive unless the parent process calls uv_unref() on
      * the child's process handle.
      */"""
      UV_PROCESS_DETACHED = (1 << 3),
      """/*
      * Hide the subprocess window that would normally be created. This option is
      * only meaningful on Windows systems. On Unix it is silently ignored.
      */"""
      UV_PROCESS_WINDOWS_HIDE = (1 << 4),
      """/*
      * Hide the subprocess console window that would normally be created. This
      * option is only meaningful on Windows systems. On Unix it is silently
      * ignored.
      */"""
      UV_PROCESS_WINDOWS_HIDE_CONSOLE = (1 << 5),
      """/*
      * Hide the subprocess GUI window that would normally be created. This
      * option is only meaningful on Windows systems. On Unix it is silently
      * ignored.
      */"""
      UV_PROCESS_WINDOWS_HIDE_GUI = (1 << 6)

    """/*
    * uv_process_t is a subclass of uv_handle_t.
    */
    struct uv_process_s {
      UV_HANDLE_FIELDS
      uv_exit_cb exit_cb    
      int pid    
      UV_PROCESS_PRIVATE_FIELDS
    } """   

    cdef int uv_spawn(uv_loop_t* loop,
                          uv_process_t* handle,
                          const uv_process_options_t* options)    
    cdef int uv_process_kill(uv_process_t*, int signum)    
    cdef int uv_kill(int pid, int signum)    
    cdef uv_pid_t uv_process_get_pid(const uv_process_t*)    


    """/*
    * uv_work_t is a subclass of uv_req_t.
    */
    struct uv_work_s {
      UV_REQ_FIELDS
      uv_loop_t* loop    
      uv_work_cb work_cb    
      uv_after_work_cb after_work_cb    
      UV_WORK_PRIVATE_FIELDS
    }  """  
